--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,15 +1,86 @@
 .header {
+  margin-bottom: 20px;
 }
 .header__title {
   font-family: var(--font-family-title);
   font-weight: var(--font-weight-black);
+  font-size: 2rem;
 }
 
-.header__control {
+.header__controls {
 }
 
 .error {
+  padding: 16px;
+  background: var(--color-background-card);
+  font-weight: var(--font-weight-medium);
+  font-size: 1.125rem;
+  border-radius: var(--border-radius);
+  margin-right: 12px;
+}
+.error img {
+  width: 28px;
+  margin-right: 10px;
+}
+.error p {
+  margin: 0;
 }
 
-.btn--refresh {
+.btn-refresh {
+  font-family: var(--font-family-primary);
+  font-weight: var(--font-weight-semi);
+  font-size: 18px;
+  padding: 15px 40px;
+  background-color: var(--color-btn-refresh);
+  color: var(--color-text);
+  border: none;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+}
+.btn-refresh img {
+  padding-left: 10px;
+  width: 26px;
+}
+
+.btn-refresh:hover,
+:focus {
+  background-color: var(--color-btn-refresh-hover);
+}
+
+.btn-refresh.disabled,
+:disabled {
+  background-color: var(--color-btn-refresh-hover);
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+@media screen and (max-width: 880px) {
+  .header__controls {
+    flex-direction: column-reverse;
+    align-items: end;
+  }
+  .error {
+    margin-right: 0;
+  }
+  .btn-refresh {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+  .header__title {
+    margin-bottom: 14px;
+  }
+  .header__controls {
+    align-items: center;
+  }
+}
+@media screen and (max-width: 430px) {
+  .btn-refresh {
+    width: 100%;
+  }
 }
