Стили error перенесены в отдельный файл

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,25 +7,7 @@
   font-size: 2rem;
 }
 
-.header__controls {
-}
-
-.error {
-  padding: 16px;
-  background: var(--color-background-card);
-  font-weight: var(--font-weight-medium);
-  font-size: 1.125rem;
-  border-radius: var(--border-radius);
-  margin-right: 12px;
-}
-.error img {
-  width: 28px;
-  margin-right: 10px;
-}
-.error p {
-  margin: 0;
-}
-
+/* Кнопка Обновить */
 .btn-refresh {
   font-family: var(--font-family-primary);
   font-weight: var(--font-weight-semi);
@@ -53,6 +35,8 @@
   opacity: 0.6;
   cursor: not-allowed;
 }
+
+/* Анимация кнопки */
 
 @media screen and (max-width: 880px) {
   .header__controls {
