--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,11 +28,8 @@
 
   /* Colors */
   --color-background: #06080c;
-  --color-background-card: linear-gradient(
-    90deg,
-    rgba(15, 19, 24, 1) 0%,
-    rgba(10, 14, 18, 1) 100%
-  );
+  --color-background-card: #0b0e12;
+  --color-background-card-details: #101318;
   --color-text: #ffffff;
   --color-card-status-live: #43ad28;
   --color-card-status-finished: #eb0237;
@@ -57,6 +54,13 @@ body {
 .app {
   margin: 42px;
   padding: 0;
+}
+
+.text--medium {
+  font-size: 0.875rem;
+  font-weight: var(--font-weight-medium);
+  color: rgba(250, 250, 250, 0.4);
+  margin-right: 8px;
 }
 
 .d-flex {
