--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,6 +7,9 @@
   font-weight: var(--font-weight-black);
   font-size: 2rem;
 }
+.header__controls {
+  gap: 10px;
+}
 
 /* Кнопка Обновить */
 .btn-refresh {
@@ -65,7 +68,7 @@
   }
 }
 
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 815px) {
   .header {
     flex-direction: column;
     align-items: center;
