--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -30,6 +30,7 @@
   --color-background: #06080c;
   --color-background-card: #0b0e12;
   --color-background-card-details: #101318;
+  --color-text-medium: rgba(250, 250, 250, 0.4);
   --color-text: #ffffff;
   --color-card-status-live: #43ad28;
   --color-card-status-finished: #eb0237;
@@ -59,7 +60,7 @@ body {
 .text--medium {
   font-size: 0.875rem;
   font-weight: var(--font-weight-medium);
-  color: rgba(250, 250, 250, 0.4);
+  color: var(--color-text-medium);
   margin-right: 8px;
 }
 
@@ -86,7 +87,7 @@ body {
 }
 
 /* Media запрос */
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 700px) {
   html,
   body {
     font-size: 14px;
