--- a/src/styles/matchDetails.css
+++ b/src/styles/matchDetails.css
@@ -1,3 +1,39 @@
 .matchDetais {
   margin-top: 32px;
+  gap: 32px;
+  flex-grow: 1;
+}
+
+.dividedLine {
+  display: none;
+  font-size: 0.875rem;
+  color: #13181f;
+}
+.dividedLine::before {
+  content: "";
+  display: block;
+  background-color: #13181f;
+  width: 100%;
+  height: 1px;
+}
+.dividedLine::after {
+  content: "";
+  display: block;
+  background-color: #13181f;
+  width: 100%;
+  height: 1px;
+}
+
+@media screen and (max-width: 1100px) {
+  .matchDetais {
+    flex-direction: column;
+    gap: 8px;
+    margin-top: 16px;
+  }
+  .dividedLine {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+  }
 }
