--- a/src/styles/playerCard.css
+++ b/src/styles/playerCard.css
@@ -9,13 +9,17 @@
 }
 
 /* Если username будет слишком длинный скрыть его по горизонтали */
-.player__username h3 {
+.player__username p {
   max-width: 90px;
   overflow-x: hidden;
 }
 
 /* Отступ от аватарки игрока */
 .player__username {
+  gap: 8px;
+}
+
+.player__kills {
   gap: 8px;
 }
 
