Добавлена анимация на счет и плавное открывание деталей матча

--- a/src/styles/gameCard.css
+++ b/src/styles/gameCard.css
@@ -50,6 +50,10 @@
   display: none;
 }
 
+.gameCard__details--flexGrow {
+  flex-grow: 1;
+}
+
 /* Media запросы */
 @media screen and (max-width: 1100px) {
   .gameCard {
