--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -37,8 +37,10 @@
 }
 
 .btn-refresh:hover,
-:focus {
+:focus,
+:focus-visible {
   background-color: var(--color-btn-refresh-hover);
+  outline: none;
 }
 
 .btn-refresh.loading,
@@ -67,6 +69,7 @@
   .header__controls {
     flex-direction: column-reverse;
     align-items: end;
+    justify-content: center;
   }
   .header__title {
     flex-direction: column;
